fix(shs-6216): adjust spacing in text areas

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/utilities/_wysiwyg-text-area.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/utilities/_wysiwyg-text-area.scss
@@ -4,7 +4,7 @@
 .text-long,
 .text-with-summary,
 .views-field-body {
-  *:last-child {
+  *:not([class]):last-child {
     margin-bottom: 0;
   }
 }
